--- a/datos.html
+++ b/datos.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="scripts.js"></script>
     </head>
