--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h3>My Google Maps Demo</h3>
         <div id="map">
-            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLcHPb0jtpNFs83fZobeJ0HZUCFc-0w_s&callback=initMap"></script>
+            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLcHPb0jtpNFs83fZobeJ0HZUCFc-0w_s&callback=load"></script>
         </div>
     </body>
 </html>
