--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
-
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="scripts.js"></script>
-    </head>
-    <body>
-        <h3>My Google Maps Demo</h3>
-        <div id="map">
-            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLcHPb0jtpNFs83fZobeJ0HZUCFc-0w_s&callback=load"></script>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="scripts.js"></script>
+</head>
+
+<body class="bg-light">
+    <nav class="navbar navbar-inverse ">
+        <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand">BiciData</a>
+                </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active">
+                    <a>Accidentes por distrito</a>
+                </li>
+                <li>
+                    <a onclick="muestraAccidentesFecha()">Accidentes por fecha</a>
+                </li>
+                <li>
+                    <a>Otra cosa</a>
+                </li>
+            </ul>
         </div>
-    </body>
+    </nav>
+    <!--
+        <div class="container text-center">
+            <button id="accidentesBtn"  onclick="muestraAccidentesBarrio()" class="btn-primary btn">Mostrar Accidentes</button>
+            <button id="fechasBtn" class="btn-primary btn">Mostrar Fechas</button>
+        </div>
+        -->
+    <hr>
+    <div id="map" class="container">
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLcHPb0jtpNFs83fZobeJ0HZUCFc-0w_s&callback=load"></script>
+    </div>
+</body>
+
 </html>
