--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a onclick="muestraAccidentesDistrito()">Accidentes por distrito</a>
                 </li>
                 <li id="fechaNav">
-                    <a onclick="muestraAccidentesFecha()">Accidentes por fecha</a>
+                    <a onclick="muestraAccidentesFecha()">Accidentes por mes</a>
                 </li>
                 <li id="horaNav">
                     <a onclick="muestraAccidentesDistritosHora()">Accidentes por hora</a>
