--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </table>
     <div class="container">
         <select class="form-control">
-            <option value="00" onclick="set00()">00:00</option>
+            <option value="00" onclick="set00()" on-touch="set00">00:00</option>
             <option value="01" onclick="set01()">01:00</option>
             <option value="02" onclick="set02()">02:00</option>
             <option value="03" onclick="set03()">03:00</option>
