--- a/index.html
+++ b/index.html
@@ -66,35 +66,38 @@
         </tbody>
     </table>
     <div class="container">
-        <select class="form-control">
-            <option value="00" onclick="set00()">00:00</option>
-            <option value="01" onclick="set01()">01:00</option>
-            <option value="02" onclick="set02()">02:00</option>
-            <option value="03" onclick="set03()">03:00</option>
-            <option value="04" onclick="set04()">04:00</option>
-            <option value="05" onclick="set05()">05:00</option>
-            <option value="06" onclick="set06()">06:00</option>
-            <option value="07" onclick="set07()">07:00</option>
-            <option value="08" onclick="set08()">08:00</option>
-            <option value="09" onclick="set09()">09:00</option>
-            <option value="10" onclick="set10()">10:00</option>
-            <option value="11" onclick="set11()">11:00</option>
-            <option value="12" onclick="set12()">12:00</option>
-            <option value="13" onclick="set13()">13:00</option>
-            <option value="14" onclick="set14()">14:00</option>
-            <option value="15" onclick="set15()">15:00</option>
-            <option value="16" onclick="set16()">16:00</option>
-            <option value="17" onclick="set17()">17:00</option>
-            <option value="18" onclick="set18()">18:00</option>
-            <option value="19" onclick="set19()">19:00</option>
-            <option value="20" onclick="set20()">20:00</option>
-            <option value="21" onclick="set21()">21:00</option>
-            <option value="22" onclick="set22()">22:00</option>
-            <option value="23" onclick="set23()">23:00</option>
-        </select>
-    </div>
-    <div id="map" class="container">
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLcHPb0jtpNFs83fZobeJ0HZUCFc-0w_s&callback=load"></script>
+        <div id="select" class="row container-fluid form-inline">
+            <select class="form-control">
+                <option value="00">00:00</option>
+                <option value="01">01:00</option>
+                <option value="02">02:00</option>
+                <option value="03">03:00</option>
+                <option value="04">04:00</option>
+                <option value="05">05:00</option>
+                <option value="06">06:00</option>
+                <option value="07">07:00</option>
+                <option value="08">08:00</option>
+                <option value="09">09:00</option>
+                <option value="10">10:00</option>
+                <option value="11">11:00</option>
+                <option value="12">12:00</option>
+                <option value="13">13:00</option>
+                <option value="14">14:00</option>
+                <option value="15">15:00</option>
+                <option value="16">16:00</option>
+                <option value="17">17:00</option>
+                <option value="18">18:00</option>
+                <option value="19">19:00</option>
+                <option value="20">20:00</option>
+                <option value="21">21:00</option>
+                <option value="22">22:00</option>
+                <option value="23">23:00</option>
+            </select>
+            <button id="setHoraBtn" class="btn btn-primary">Submit</button>
+        </div>
+        <div id="map">
+            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLcHPb0jtpNFs83fZobeJ0HZUCFc-0w_s&callback=load"></script>
+        </div>
     </div>
 </body>
 
