--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </select>
             <button id="setHoraBtn" class="btn btn-primary">Submit</button>
         </div>
-        <div id="map">
+        <div id="map" class="map-responsive">
             <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLcHPb0jtpNFs83fZobeJ0HZUCFc-0w_s&callback=load"></script>
         </div>
     </div>
