--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </nav>
     <hr>
-    <table id="fechas" class="table table-responsive">
+    <table id="fechas" class="table table-responsive col-md-12 col-sm-12">
         <thead>
             <tr>
                 <th scope="col">Enero</th>
